@startuml

class Produit {
  +id
  +nom
  +prix
  +stock
  +magasinId : int
}

class Categorie {
  +id
  +nom
  +magasinId : int
}

class Magasin {
  +id
  +nom
  +adresse
}

class Vente {
  +id
  +total
  +date
  +magasinId : int
}

class LigneVente {
  +id
  +quantite
  +sousTotal
  +magasinId : int
}

class Paiement {
  +id
  +moyen
  +montant
  +date
  +magasinId : int
}

class Utilisateur {
  +id
  +nom
  +role
  +magasinId : int
}

class DemandeReappro {
  +id
  +produitId : int
  +quantite
  +date
}

class CentreLogistique {
  +id
  +nom
  +stock
  +ProduitId : int
}

' Relations

Produit --> Categorie : appartient à
Categorie --> Produit : contient plusieurs

Produit --> Magasin : stocké dans
Produit --> LigneVente : utilisé dans
Produit --> CentreLogistique : 1-1 avec

LigneVente --> Vente : liée à
Vente --> LigneVente : composée de

Vente --> Paiement : a 1
Paiement --> Vente : appartient à

Vente --> Utilisateur : faite par
Utilisateur --> Vente : enregistre plusieurs

DemandeReappro --> Produit : demande pour
Produit --> DemandeReappro : a plusieurs

CentreLogistique --> Produit : stock logistique de

Utilisateur --> Magasin : travaille dans
Categorie --> Magasin : associée à
Vente --> Magasin : effectuée dans
Paiement --> Magasin : effectué dans
LigneVente --> Magasin : point de vente

@enduml
